extra method in Common graph op, follow edges multi-start